// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWrapper renders correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      onResize={[MockFunction]}
      onScroll={[MockFunction]}
      row={
        Object {
          "isEditable": undefined,
          "isExpanded": undefined,
          "isHeightAuto": undefined,
          "isOpen": undefined,
        }
      }
      rowProps={null}
      trRef={
        [MockFunction] {
          "calls": Array [
            Array [
              <tr
                class=""
                data-ouia-component-id="0"
                data-ouia-component-type="PF4/TableRow"
                data-ouia-safe="true"
              />,
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
    >
      <tr
        className=""
        data-ouia-component-id={0}
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe={true}
        hidden={false}
      />
    </RowWrapper>
  </tbody>
</table>
`;

exports[`RowWrapper renders expanded correctly 1`] = `
<table>
  <tbody>
    <RowWrapper
      className=""
      row={
        Object {
          "isExpanded": true,
        }
      }
      rowProps={null}
    >
      <tr
        className="pf-c-table__expandable-row pf-m-expanded"
        data-ouia-component-id={1}
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe={true}
        hidden={false}
      />
    </RowWrapper>
  </tbody>
</table>
`;
